Remade it in C++, and added hooks

--- a/shotkey.1
+++ b/shotkey.1
@@ -8,10 +8,10 @@ A suckless hot key daemon for X inspired by the suckless philosophy with configu
 
 
 .SH Configuration
-You can cofigure your key bindings, modes and other shit inside `config.h`.
+You can cofigure your key bindings, modes and other shit inside `config.hpp`.
 This keeps it fast, secure and simple.
 
-.SS config.h
+.SS config.hpp
 
 .TP
 .B shell
